// Vitest Snapshot v1

exports[`CdrRating > with an href > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1699 17.7643L11.9684 17.6359L11.767 17.7643L6.37604 21.1984L7.81014
      14.6842L7.85664 14.473L7.69707 14.3269L2.8482 9.88945L9.21728 9.31204L9.44592
      9.29131L9.53144 9.07825L11.9684 3.00672L14.4055 9.07825L14.491 9.29131L14.7196
      9.31204L21.0887 9.88945L16.2398 14.3269L16.0803 14.473L16.1268 14.6842L17.5608
      21.1984L12.1699 17.7643Z"
        stroke-width="0.75"
      />
      <path
        class="cdr-rating__star--filled"
        d="M3.64532 10.1547L9.30735 9.65746V18.9355L6.87779 20.5068L8.2268 14.3511L3.64532 10.1547Z"
      />
      <path
        class="cdr-rating__star--partial-stroke"
        d="M9.60486 8.97247L9.60551 19.1315"
        stroke-width="0.75"
      />
      <path
        class="cdr-rating__star--partial-stroke"
        d="M9.44125 9.79321L4.01843 10.2804L8.40374 14.2981L7.11705 20.1342L9.78234 18.4339"
        stroke-width="1.75"
      />
    </svg>
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.2
    </span>
    <span>
      100
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 100 reviews with an average rating of 3.2 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with an href > with a count of 0 > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1699 17.7643L11.9684 17.6359L11.767 17.7643L6.37604 21.1984L7.81014
      14.6842L7.85664 14.473L7.69707 14.3269L2.8482 9.88945L9.21728 9.31204L9.44592
      9.29131L9.53144 9.07825L11.9684 3.00672L14.4055 9.07825L14.491 9.29131L14.7196
      9.31204L21.0887 9.88945L16.2398 14.3269L16.0803 14.473L16.1268 14.6842L17.5608
      21.1984L12.1699 17.7643Z"
        stroke-width="0.75"
      />
      <path
        class="cdr-rating__star--filled"
        d="M3.64532 10.1547L9.30735 9.65746V18.9355L6.87779 20.5068L8.2268 14.3511L3.64532 10.1547Z"
      />
      <path
        class="cdr-rating__star--partial-stroke"
        d="M9.60486 8.97247L9.60551 19.1315"
        stroke-width="0.75"
      />
      <path
        class="cdr-rating__star--partial-stroke"
        d="M9.44125 9.79321L4.01843 10.2804L8.40374 14.2981L7.11705 20.1342L9.78234 18.4339"
        stroke-width="1.75"
      />
    </svg>
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.2
    </span>
    <span>
      0
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    No reviews yet; be the first!
  </span>
</a>
`;

exports[`CdrRating > with an href > with a whole number rating > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <!--v-if-->
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.0
    </span>
    <span>
      1
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 1 reviews with an average rating of 3.0 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with an href > with decimal rating and count 1 > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1744 17.7643L11.9729 17.6359L11.7714 17.7643L6.3805 21.1984L7.81459
      14.6842L7.8611 14.473L7.70153 14.3269L2.85265 9.88945L9.22174 9.31204L9.45038
      9.29131L9.53589 9.07825L11.9729 3.00672L14.4099 9.07825L14.4954 9.29131L14.7241
      9.31204L21.0931 9.88945L16.2443 14.3269L16.0847 14.473L16.1312 14.6842L17.5653
      21.1984L12.1744 17.7643Z"
        stroke-width="0.75"
      />
      <path
        class="cdr-rating__star--partial-fill"
        d="M3.64978 10.1548L9.3118 9.65756L11.9821 3.92165V17.2275L6.88225 20.5069L8.23125
      14.3512L3.64978 10.1548Z"
      />
      <path
        class="cdr-rating__star--partial-stroke"
        d="M11.9822 3.92163L11.9831 17.6424"
        stroke-width="0.75"
      />
      <path
        class="cdr-rating__star--partial-stroke"
        d="M11.3498 5.89038L9.79225 9.76097L4.01752 10.2828L8.406 14.2935L7.12489
      20.1383L12.0741 16.9881"
        stroke-width="1.75"
      />
      <path
        class="cdr-rating__star--partial-stroke"
        d="M11.9208 4.59326L11.3589 6.31024"
      />
    </svg>
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.4
    </span>
    <span>
      1
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 1 reviews with an average rating of 3.4 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with an href > with string input > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1744 17.7643L11.9729 17.6359L11.7714 17.7643L6.3805 21.1984L7.81459
      14.6842L7.8611 14.473L7.70153 14.3269L2.85265 9.88945L9.22174 9.31204L9.45038
      9.29131L9.53589 9.07825L11.9729 3.00672L14.4099 9.07825L14.4954 9.29131L14.7241
      9.31204L21.0931 9.88945L16.2443 14.3269L16.0847 14.473L16.1312 14.6842L17.5653
      21.1984L12.1744 17.7643Z"
        stroke-width="0.75"
      />
      <path
        class="cdr-rating__star--partial-fill"
        d="M3.64978 10.1548L9.3118 9.65756L11.9821 3.92165V17.2275L6.88225 20.5069L8.23125
      14.3512L3.64978 10.1548Z"
      />
      <path
        class="cdr-rating__star--partial-stroke"
        d="M11.9822 3.92163L11.9831 17.6424"
        stroke-width="0.75"
      />
      <path
        class="cdr-rating__star--partial-stroke"
        d="M11.3498 5.89038L9.79225 9.76097L4.01752 10.2828L8.406 14.2935L7.12489
      20.1383L12.0741 16.9881"
        stroke-width="1.75"
      />
      <path
        class="cdr-rating__star--partial-stroke"
        d="M11.9208 4.59326L11.3589 6.31024"
      />
    </svg>
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.4
    </span>
    <span>
      2
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 2 reviews with an average rating of 3.4 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > without an href > renders correctly 1`] = `
<div
  class="cdr-rating cdr-rating--medium"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <!--v-if-->
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    
  </div>
  <!--v-if-->
  <span
    class="cdr-rating__caption-sr"
  >
    Rated 3.0 out of 5 stars
  </span>
</div>
`;

exports[`CdrRating > without an href > with a count of 0 > renders correctly 1`] = `
<div
  class="cdr-rating cdr-rating--medium"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <!--v-if-->
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <!--v-if-->
    <span>
      0
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    0 reviews
  </span>
</div>
`;

exports[`CdrRating > without an href > with a count of 100 > renders correctly 1`] = `
<div
  class="cdr-rating cdr-rating--medium"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <!--v-if-->
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--empty"
        d="M12.1702 17.7643L11.9688 17.6359L11.7673 17.7643L6.37635 21.1984L7.81044
        14.6842L7.85695 14.473L7.69738 14.3269L2.8485 9.88945L9.21759 9.31204L9.44623
        9.29131L9.53174 9.07825L11.9688 3.00672L14.4058 9.07825L14.4913 9.29131L14.7199
        9.31204L21.089 9.88945L16.2401 14.3269L16.0806 14.473L16.1271 14.6842L17.5612
        21.1984L12.1702 17.7643Z"
        stroke-width="0.75"
      />
    </svg>
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <!--v-if-->
    <span>
      100
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    100 reviews with an average rating of 3.0 out of 5 stars
  </span>
</div>
`;
